added navlink for fraud detection in footer

--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -57,7 +57,7 @@
               >
             </li>
             <li class="nav-item"></li>
-              <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
+              <a class="nav-link" href="#">Fraud Email Detection</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -150,6 +150,7 @@
           <ul class="list-unstyled">
               <li><a href="../../frontend/index.html">Home</a></li>
               <li><a href="../../scrollytelly/data.html">Trending Scams</a></li>
+              <li><a href="#">Fraud Email Detection</a></li>
           </ul>
           </div>
       </div>
