--- a/frontend/voicePhishing.html
+++ b/frontend/voicePhishing.html
@@ -132,6 +132,7 @@
                 <ul class="list-unstyled">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="../scrollytelly/data.html">Trending Scams</a></li>
+                    <li><a href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
                 </ul>
                 </div>
             </div>
