--- a/frontend/index.html
+++ b/frontend/index.html
@@ -180,6 +180,7 @@
           <ul class="list-unstyled">
             <li><a href="#">Home</a></li>
             <li><a href="../scrollytelly/data.html">Trending Scams</a></li>
+            <li><a href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
           </ul>
         </div>
       </div>
