--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -195,6 +195,7 @@
             <ul class="list-unstyled">
               <li><a href="../frontend/index.html">Home</a></li>
               <li><a href="#">Trending Scams</a></li>
+              <li><a href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
             </ul>
           </div>
         </div>
