bold functionality added on all the tabs

--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -48,7 +48,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="../../frontend/index.html">Home</a>
             </li>
             <li class="nav-item">
@@ -57,7 +57,7 @@
               >
             </li>
             <li class="nav-item"></li>
-              <a class="nav-link" href="#">Fraud Email Detection</a>
+              <a class="nav-link active" href="#">Fraud Email Detection</a>
             </li>
             <li class="nav-item dropdown">
               <a
