--- a/frontend/voicePhishing.html
+++ b/frontend/voicePhishing.html
@@ -45,7 +45,7 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                  <li class="nav-item active">
+                  <li class="nav-item">
                     <a class="nav-link" href="index.html"
                       >Home</a
                     >
@@ -56,7 +56,7 @@
                   <li class="nav-item"></li>
                     <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
                   </li>
-                  <li class="nav-item dropdown">
+                  <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Discover
                     </a>
