--- a/frontend/index.html
+++ b/frontend/index.html
@@ -188,11 +188,15 @@
       <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
     </div>
   </footer>
-
+  <a href="javascript:void(0);" class="down-arrow" onclick="scrollDown();">
+    <i class="fas fa-chevron-down"></i>
+  </a>
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="./js/home.js"></script>
+  
+  
 </body>
 </html>
