--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -37,7 +37,7 @@
               <a class="nav-link" href="../frontend/index.html"
                 >Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="#">Trending Scams</a>
             </li>
             <li class="nav-item"></li>
