--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,6 +50,9 @@
           <li class="nav-item"></li>
             <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Quiz/quiz.html">Test Your Knowledge</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Discover
@@ -133,10 +136,10 @@
 					</div>
           <br>
 					<div class="contentBx">
-						<h3>Phishing Awareness Quiz</h3>
+						<h3>Test Your Knowledge</h3>
 					</div>
         </div>
-        <a href=""> Test Your Knowledge </a>
+        <a href="Quiz/quiz.html"> Take The Test </a>
 			</div>
 
       <div class="card">
@@ -181,6 +184,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="../scrollytelly/data.html">Trending Scams</a></li>
             <li><a href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
+            <li><a href="Quiz/quiz.html">Test Your Knowledge</a></li>
           </ul>
         </div>
       </div>
