--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -59,6 +59,9 @@
             <li class="nav-item"></li>
               <a class="nav-link active" href="#">Fraud Email Detection</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../../frontend/Quiz/quiz.html">Test Your Knowledge</a>
+            </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
