--- a/frontend/spearPhishing.html
+++ b/frontend/spearPhishing.html
@@ -56,6 +56,9 @@
                   <li class="nav-item"></li>
                     <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="Quiz/quiz.html">Test Your Knowledge</a>
+                  </li>
                   <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Discover
