added hyperlinks to quiz page in navbar & footer

--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -154,6 +154,7 @@
               <li><a href="../../frontend/index.html">Home</a></li>
               <li><a href="../../scrollytelly/data.html">Trending Scams</a></li>
               <li><a href="#">Fraud Email Detection</a></li>
+              <li><a href="../../frontend/Quiz/quiz.html">Test Your Knowledge</a></li>
           </ul>
           </div>
       </div>
