--- a/frontend/index.html
+++ b/frontend/index.html
@@ -111,7 +111,7 @@
 						<h3>Trending Scam</h3>
 					</div>
         </div>
-        <a href=""> Discover More </a>
+        <a href="../scrollytelly/data.html"> Discover More </a>
 			</div>
 
 			<div class="card">
@@ -125,7 +125,7 @@
 						<h3>Types of Phishing Scams</h3>
 					</div>
         </div>
-        <a href=""> Learn More </a>
+        <a href="businessEmailCompromisePhishing.html"> Learn More </a>
 			</div>
 
       <div class="card">
@@ -153,7 +153,7 @@
 						<h3>E-mail Fraud Detection</h3>
 					</div>
         </div>
-        <a href=""> Find Out How to Spot Email Fraud </a>
+        <a href="../fraud_detection/backend/email_detection.html"> Find Out How to Spot Email Fraud </a>
 			</div>
 		</div>
   </section>
