--- a/frontend/spearPhishing.html
+++ b/frontend/spearPhishing.html
@@ -144,6 +144,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="../scrollytelly/data.html">Trending Scams</a></li>
                     <li><a href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
+                    <li><a href="Quiz/quiz.html">Test Your Knowledge</a></li>
                 </ul>
                 </div>
             </div>
