--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -199,6 +199,7 @@
               <li><a href="../frontend/index.html">Home</a></li>
               <li><a href="#">Trending Scams</a></li>
               <li><a href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
+              <li><a href="../frontend/Quiz/quiz.html">Test Your Knowledge</a></li>
             </ul>
           </div>
         </div>
