--- a/frontend/Quiz/quiz.html
+++ b/frontend/Quiz/quiz.html
@@ -115,6 +115,8 @@
                     <ul class="list-unstyled">
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../../scrollytelly/data.html">Trending Scams</a></li>
+                        <li><a href="../../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
+                        <li><a href="#">Test Your Knowledge</a></li>
                     </ul>
                 </div>
             </div>
