--- a/frontend/Quiz/quiz.html
+++ b/frontend/Quiz/quiz.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="/cybercrime-and-scams/frontend/resources/logof.jpg" alt="Senior Safe Logo" class="logo" style="height: 50px; max-width: 150px; width: auto;">
+                <img src="../resources/logof.jpg" alt="Senior Safe Logo" class="logo" style="height: 50px; max-width: 150px; width: auto;">
                  Senior Safe
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
