added recovery steps section

--- a/frontend/businessEmailCompromisePhishing.html
+++ b/frontend/businessEmailCompromisePhishing.html
@@ -82,18 +82,14 @@
         <section class="scam-introduction-section">
             <h1>Business Email Compromise Phishing</h1>
             <p>
-              Business email compromise (BEC) is a type of cybercrime where the scammer uses email to trick someone into sending money or divulging confidential company info. 
-              The culprit poses as a trusted figure, then asks for a fake bill to be paid or for sensitive data they can use in another scam. 
-            </p>
+              Business Email Compromise (BEC) is a form of cybercrime in which scammers use email to deceive individuals into transferring funds or revealing confidential company information. The perpetrator impersonates a trusted figure, requesting payment for a fraudulent invoice or seeking sensitive data that can be exploited for further scams.</p>
         </section>
 
         <section class="scam-real-life-examples-section">
             <div class="content">
                 <h2>Real-Life Examples</h2>
                 <p>
-                  Even smaller charities are vulnerable. Treasure Island, a homeless charity, lost $625,000 to a BEC scam. 
-                  Hackers impersonated Executive Director Sherry Williams in an email, manipulated the information on a legitimate invoice, and changed the wire transfer instructions to serve their own purposes.
-                </p>
+                  Even smaller charities are at risk of Business Email Compromise (BEC). For instance, Treasure Island, a homeless charity, lost $625,000 to a BEC scam when hackers impersonated Executive Director Sherry Williams. They manipulated the details on a legitimate invoice and altered the wire transfer instructions to redirect funds for their own benefit.</p>
             </div>
             <div class="image-container">
                 <!-- Image Reference: https://www.mailguard.com.au/blog/whaling-ceo-fraud-business-email-compromise-targeted-spear-phishing-attacks-continue-to-trouble-businesses -->
@@ -105,19 +101,27 @@
             <h2>How to Prevent</h2>
             <div class="list-container">
                 <ol class="gradient-list">
-                    <li>If someone asks for a money transfer or important information, call to confirm. Don’t just reply to the email.</li>
-                    <li>Set up two-factor authentication for company emails so it’s harder for others to access, even if the password is stolen.</li>
-                    <li>Only allow necessary people to access critical company information, and set up alerts for unusual activities.</li>
-                    <li>Teach employees how to recognize suspicious emails, especially urgent ones that seem to come from executives.</li>
+                  <li>Always call to confirm requests for money transfers or sensitive information instead of replying to the email.</li>
+                  <li>Implement two-factor authentication for company emails to enhance security against unauthorized access.</li>
+                  <li>Limit access to critical company information to only necessary personnel.</li>
+                  <li>Set up alerts for any unusual activities in company accounts.</li>
+                  <li>Educate employees on recognizing suspicious emails, especially those that appear urgent and seem to come from executives.</li>
                 </ol>
             </div>
         </section>
 
+        <section class="how-to-prevent-section">
+          <h2>Recovery Steps</h2>
+          <br>
+          <p>If you suspect a Business Email Compromise (BEC) incident, immediately disconnect affected devices from the internet and change passwords for compromised accounts. Notify your IT and security teams for investigation and mitigation. Review financial transactions for unauthorized activity and analyze email logs to identify any suspicious behavior. Monitor all accounts closely for unusual activities and inform employees about the incident to raise awareness. Report the BEC incident to law enforcement and relevant regulatory bodies. Finally, reassess and strengthen security protocols, including training employees to recognize phishing and BEC scams, and consider enrolling in identity theft protection services if sensitive data was compromised.</p>
+        </section>
+
         <!-- Add a navigation button to the next scam page -->
+        <!--
         <div class="btn-container">
           <button class="button-22" id="BECNextBtn">Go to the Next Scam Page (Clone Phishing)</button>
         </div>
-
+        -->
         <!-- Footer -->
         <footer class="footer bg-light text-center">
             <div class="container">
