--- a/frontend/clonePhishing.html
+++ b/frontend/clonePhishing.html
@@ -80,10 +80,10 @@
         <!-- Reference: all the text contents come from https://us.norton.com/blog/online-scams/clone-phishing -->
         <section class="scam-introduction-section">
             <h1>Clone Phishing</h1>
-            <p>Clone phishing is a type of cyberattack where scammers create a fake email or message that looks almost identical to a legitimate one you've received before. 
-                Scammers make copies of an email you've already received and make a few changes to try and trick you or your employees.</p>
-            <p>
-                Usually, they'll try to get you to click on a malicious link, download malware, or provide sensitive information like passwords or credit card numbers.</p>
+            <p>Clone phishing is a type of cyberattack in which scammers replicate a legitimate email or message that you or your employees have previously received. 
+              They create an almost identical copy of the original communication, making subtle changes to deceive the recipient. </p>
+            <p>The goal is typically to entice the recipient into clicking a malicious link, downloading malware, or providing sensitive information such as passwords or credit card details.
+                Usually, they'll try to get you to click on a malicious link, download malware, or provide sensitive information like passwords or credit card numbers.
             </p>
         </section>
 
@@ -91,8 +91,7 @@
             <div class="content">
                 <h2>Real-Life Examples</h2>
                 <p>
-                Messages in a clone phishing attack are never the same, but they often have similar elements.
-                The message usually has wording that makes it seem like an urgent issue, and it has a malicious link or file attachment.
+                  Messages in a clone phishing attack are never exactly the same, but they often contain similar elements. Typically, they are crafted to convey a sense of urgency and include a malicious link or file attachment intended to deceive the recipient.
                 </p>
             </div>
             <!-- Image Reference: https://www.valimail.com/resources/guides/guide-to-phishing/clone-phishing/-->
@@ -105,17 +104,25 @@
             <h2>How to Prevent</h2>
             <div class="list-container">
                 <ol class="gradient-list">
-                    <li>Point your mouse at a link before you click to see where it really goes. Don’t click on links if you weren’t expecting them.</li>
-                    <li>Make sure your phone and security programs are up to date to stay safe.</li>
-                    <li>Be careful if an email doesn’t use your name, has mistakes, or urgently asks for your personal information—these can be scams.</li>
+                  <li>Hover your mouse over a link before clicking to verify its true destination. Avoid clicking on links if you weren’t expecting them.</li>
+                  <li>Ensure your phone and security software are always up to date to maintain protection.</li>
+                  <li>Be cautious if an email doesn’t address you by name, contains errors, or urgently requests personal information—these are common signs of a scam.</li>
                 </ol>
             </div>
         </section>
 
+        <section class="how-to-prevent-section">
+          <h2>Recovery Steps</h2>
+          <br>
+          <p>If you suspect you've fallen victim to a clone phishing attack, immediately disconnect from the internet and avoid clicking any links. Change passwords for compromised accounts, run a full security scan for malware, and review your financial accounts for unauthorized activity. Notify your IT or security team if you're using a work device, and educate others about the attack. Monitor for further phishing attempts and consider enabling account alerts. If sensitive information was compromised, consider enrolling in identity theft protection services for added security.</p>
+        </section>
+
         <!-- Add a navigation button to the next scam page -->
+         <!--
         <div class="btn-container">
           <button class="button-22" id="clonePhishingNextBtn">Go to the Next Scam Page (Pop-up Phishing)</button>
         </div>
+        -->
 
         <!-- Footer -->
         <footer class="footer bg-light text-center">
