--- a/frontend/popupPhishing.html
+++ b/frontend/popupPhishing.html
@@ -81,17 +81,14 @@
         <!-- Reference: all the text contents come from https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
         <section class="scam-introduction-section">
             <h1>Pop-up Phishing</h1>
-            <p>Pop-up phishing often uses a pop-up about a problem with your computer’s security or some other issue to trick you into clicking. 
-              You are then directed to download a file, which ends up being malware, 
-              or to call what is supposed to be a support center.</p>
+            <p>Pop-up phishing frequently employs deceptive pop-up messages that claim there is a problem with your computer’s security or another urgent issue to trick you into clicking. This action typically directs you to download a file that contains malware or to call a fake support center.</p>
         </section>
 
         <section class="scam-real-life-examples-section">
             <div class="content">
                 <h2>Real-Life Examples</h2>
                 <p>
-                  Users have sometimes received pop-ups saying they can qualify for AppleCare renewal, 
-                  which would supposedly avail them of extended protection for their Apple devices. However, the offer is fake.
+                  Users have occasionally encountered pop-ups claiming they qualify for AppleCare renewal, suggesting they can receive extended protection for their Apple devices. However, these offers are fraudulent and intended to deceive users.
                 </p>
             </div>
             <div class="image-container">
@@ -105,17 +102,25 @@
             <div class="list-container">
                 <ol class="gradient-list">
                   <li>Turn on pop-up blockers in your browser settings to prevent unwanted pop-ups.</li>
-                  <li>Do not click any buttons or links in pop-ups that claim urgent issues or prizes. Close the pop-up instead.</li>
+                  <li>Avoid clicking any buttons or links in pop-ups that claim to address urgent issues or offer prizes; instead, close the pop-up.</li>
                   <li>Install reliable antivirus software to help detect and block phishing pop-ups.</li>
-                  <li>Only enter personal information on websites with “https” in the address bar for added security.</li>
+                  <li>Only enter personal information on websites that have “https” in the address bar for added security.</li>
                 </ol>
             </div>
         </section>
 
+        <section class="how-to-prevent-section">
+          <h2>Recovery Steps</h2>
+          <br>
+          <p>If you suspect you've fallen victim to a pop-up phishing attack, first close the pop-up and avoid clicking any links or buttons. Run a full scan with reliable antivirus software to detect and remove any malware that may have been installed. Change any passwords for accounts that may have been compromised and monitor your financial accounts for unauthorized transactions. Ensure your browser’s pop-up blocker is activated and consider clearing your browser cache and cookies. Educate yourself about recognizing phishing attempts to prevent future incidents. If you provided personal information, consider enrolling in identity theft protection services for added security.</p>
+        </section>
+
         <!-- Add a navigation button to the next scam page -->
+        <!--
         <div class="btn-container">
           <button class="button-22" id="popupPhishingNextBtn">Go to the Next Scam Page (Search Engine Phishing)</button>
         </div>
+        -->
 
         <!-- Footer -->
         <footer class="footer bg-light text-center">
