--- a/frontend/searchEnginePhishing.html
+++ b/frontend/searchEnginePhishing.html
@@ -81,17 +81,16 @@
         <!-- Reference: all the text contents come from https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
         <section class="scam-introduction-section">
             <h1>Search Engine Phishing</h1>
-            <p>A search engine phishing attack involves an attacker making fake products that look attractive. 
-              When these pop up in a search engine, the target is asked to enter sensitive information before purchasing, which then goes to a hacker.</p>
+            <p>A search engine phishing attack involves an attacker creating fake products that appear appealing in search engine results. When users click on these listings, 
+              they are prompted to enter sensitive information before completing a purchase, which is then captured by the hacker.
+            </p>
         </section>
 
         <section class="scam-real-life-examples-section">
             <div class="content">
                 <h2>Real-Life Examples</h2>
                 <p>
-                  Search for a popular website, such as Amazon.com, on a search engine and click on one of the top results. 
-                  However, instead of being directed to the legitimate website, 
-                  you're taken to a convincing but fake version (something like Am@zon.com) designed to mimic the original site.
+                  When you search for a popular website, like Amazon.com, on a search engine and click on one of the top results, you may find yourself redirected to a convincing but fraudulent site, such as Am@zon.com. This fake version is designed to closely mimic the original site, tricking users into entering sensitive information or making unauthorized purchases.
                 </p>
             </div>
             <div class="image-container">
@@ -104,18 +103,26 @@
             <h2>How to Prevent</h2>
             <div class="list-container">
                 <ol class="gradient-list">
-                  <li>Before clicking on a search result, look carefully at the website address to make sure it looks correct and doesn’t have strange spellings.</li>
-                  <li>Stick to well-known search engines like Google or Bing, which are better at blocking fake websites.</li>
-                  <li>Make sure the website has “https” at the start of its address and a padlock symbol before entering any personal information.</li>
-                  <li>Use browser tools or extensions that can warn you about unsafe websites.</li>
+                  <li>Before clicking on a search result, carefully examine the website address to ensure it looks correct and does not contain unusual spellings.</li>
+                  <li>Stick to well-known search engines like Google or Bing, as they are more effective at blocking fake websites.</li>
+                  <li>Verify that the website address begins with “https” and displays a padlock symbol before entering any personal information.</li>
+                  <li>Utilize browser tools or extensions that can alert you to unsafe websites.</li>
                 </ol>
             </div>
         </section>
 
+        <section class="how-to-prevent-section">
+          <h2>Recovery Steps</h2>
+          <br>
+          <p>If you suspect you’ve fallen victim to a search engine phishing attack, immediately disconnect your device from the internet and close the fraudulent website without entering any personal information. Run a full scan with reputable antivirus software to detect and remove any malware that may have been installed. Change the passwords for any accounts you accessed and monitor your financial statements for unauthorized transactions. Educate yourself on recognizing phishing attempts to prevent future incidents, and consider enrolling in identity theft protection services if personal information was compromised. Finally, report the phishing attack to relevant authorities, such as the Federal Trade Commission (FTC) or local law enforcement.</p>
+        </section>
+
         <!-- Add a navigation button to the next scam page -->
+         <!--
         <div class="btn-container">
           <button class="button-22" id="searchEnginePhishingNextBtn">Go to the Next Scam Page (Smishing)</button>
         </div>
+        -->
 
         <!-- Footer -->
         <footer class="footer bg-light text-center">
