--- a/frontend/voicePhishing.html
+++ b/frontend/voicePhishing.html
@@ -81,20 +81,14 @@
         <!-- Reference: all the text contents come from https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
         <section class="scam-introduction-section">
             <h1>Voice Phishing</h1>
-            <p>Scammers pretend to be from a trusted place like your bank, the IRS, or a delivery service. 
-                They may call you from a toll-free number or use special technology to sound real. 
-                They try to trick you into giving personal information like your passwords, credit card, or bank details. 
-                Scammers can then use this information to steal your money or identity.<p>
-                Usually, they'll try to get you to click on a malicious link, download malware, or provide sensitive information like passwords or credit card numbers.</p>
-            </p>
+            <p>Scammers often impersonate trusted entities, such as your bank, the IRS, or a delivery service, using toll-free numbers or technology that makes their calls appear legitimate. Their goal is to deceive you into providing personal information, including passwords, credit card numbers, or bank details, which they can then exploit to steal your money or identity. Typically, they may attempt to trick you into clicking on malicious links, downloading malware, or revealing sensitive information.</p>
         </section>
 
         <section class="scam-real-life-examples-section">
             <div class="content">
                 <h2>Real-Life Examples</h2>
                 <p>
-                    A more common smishing attack uses brand names with purported links to the brand’s site. 
-                    Usually, an attacker tells the user that they’ve won money or provides a malicious link for tracking packages
+                  A prevalent smishing attack often involves using well-known brand names along with deceptive links that claim to lead to the brand's official website. In these attacks, the scammer typically informs the recipient that they have won money or provides a malicious link for tracking packages. This tactic aims to trick users into clicking the link, potentially leading to the theft of personal information or the download of malware.
                 </p>
             </div>
             <div class="image-container">
@@ -107,12 +101,18 @@
             <h2>How to Prevent</h2>
             <div class="list-container">
                 <ol class="gradient-list">
-                    <li>Did you hang up on a call when you realized it wasn’t a real person? Don’t worry, you’re not being rude. Robots don’t have feelings, so it’s okay. Just hang up and go about your day.</li>
-                    <li>Don’t respond to voice prompts. Don’t press 1, press 3, or say “yes” to speak to an operator.</li>
-                    <li>Verify the caller’s identity. Ask for their name, then call back using the official number from the company’s website. Never call back using a number they give you.</li>
-                    <li>Never share sensitive information over the phone. Remember, government agencies, banks, or credit card companies will never ask for your personal information over the phone.</li>
+                    <li>If you realize a call isn’t from a real person, it’s perfectly acceptable to hang up; robots don’t have feelings.</li>
+                    <li>Avoid responding to voice prompts; don’t press buttons or say “yes” to speak to an operator.</li>
+                    <li>Verify the caller’s identity by asking for their name and then calling back using the official number from the company's website—never use a number they provide.</li>
+                    <li>Never share sensitive information over the phone, as legitimate government agencies, banks, or credit card companies will never ask for personal details in this manner.</li>
                 </ol>
             </div>
+        </section>
+
+        <section class="how-to-prevent-section">
+          <h2>Recovery Steps</h2>
+          <br>
+          <p>If you suspect you’ve been targeted by a fraudulent call, hang up immediately and do not engage further. Review your bank and credit card statements for any unauthorized transactions and report them to your financial institution right away. Change passwords for any accounts that may have been compromised, and enable two-factor authentication for added security. If you provided personal information during the call, consider placing a fraud alert on your credit report and monitoring your accounts closely for unusual activity. Educate yourself on common scam tactics to better recognize and avoid similar threats in the future.</p>
         </section>
 
         <!-- Footer -->
