--- a/frontend/smishingPhishing.html
+++ b/frontend/smishingPhishing.html
@@ -81,12 +81,7 @@
         <!-- Reference: all the text contents come from https://www.kaspersky.com/resource-center/threats/what-is-smishing-and-how-to-defend-against-it -->
         <section class="scam-introduction-section">
             <h1>Smishing (SMS Phishing)</h1>
-            <p>Smishing is a type of scam that happens through text messages on your phone. 
-                Scammers try to trick you into giving personal information, like passwords or bank details. 
-                Sometimes they use fake websites or bad apps to help with their scam. 
-                This can happen on regular text messages or other messaging apps you use on your phone.</p>
-            <p>
-                Usually, they'll try to get you to click on a malicious link, download malware, or provide sensitive information like passwords or credit card numbers.</p>
+            <p>Smishing is a type of scam that occurs through text messages on your phone, where scammers attempt to trick you into revealing personal information such as passwords or bank details. They may employ fake websites or malicious apps to facilitate their schemes. This can occur through regular text messages or various messaging apps. Typically, the scammers will try to entice you to click on a malicious link, download malware, or provide sensitive information like passwords or credit card numbers.</p>
             </p>
         </section>
 
@@ -94,8 +89,7 @@
             <div class="content">
                 <h2>Real-Life Examples</h2>
                 <p>
-                    A more common smishing attack uses brand names with purported links to the brand’s site. 
-                    Usually, an attacker tells the user that they’ve won money or provides a malicious link for tracking packages
+                  A common smishing attack often involves using well-known brand names along with deceptive links that claim to direct users to the brand's website. Typically, the attacker informs the recipient that they have won money or provides a malicious link for tracking packages, aiming to trick them into clicking the link and potentially revealing sensitive information or downloading malware.
                 </p>
             </div>
             <div class="image-container">
@@ -107,18 +101,26 @@
             <h2>How to Prevent</h2>
             <div class="list-container">
                 <ol class="gradient-list">
-                    <li>Even replying with “STOP” can let scammers know your number is active. Just ignore the message.</li>
-                    <li>If a message seems urgent, be cautious—it could be a scam. Take your time before doing anything.</li>
-                    <li>If you're unsure, call your bank or company directly using official contact info. They don’t ask for personal details over text.</li>
-                    <li>Don’t use any links or phone numbers from suspicious texts. Always go to the company’s official website or contact line.</li>
+                  <li>Even replying with “STOP” can indicate to scammers that your number is active; it’s best to ignore the message entirely.</li>
+                  <li>If a message seems urgent, exercise caution, as it could be a scam. Take your time before taking any action.</li>
+                  <li>If you're uncertain about a message, contact your bank or company directly using official contact information, as they do not request personal details via text.</li>
+                  <li>Avoid using any links or phone numbers provided in suspicious texts; instead, visit the company’s official website or use their official contact line.</li>
                 </ol>
             </div>
         </section>
 
+        <section class="how-to-prevent-section">
+          <h2>Recovery Steps</h2>
+          <br>
+          <p>If you suspect you've fallen victim to a smishing attack, first ignore any suspicious text messages and do not reply, even with "STOP," as this may confirm your number is active. If you clicked a link or provided any personal information, contact your bank or service provider immediately using official contact information to secure your accounts. Run a malware scan on your device using reputable antivirus software to detect any potential threats. Monitor your financial statements for unauthorized transactions and consider changing passwords for any accounts that may have been compromised. Finally, educate yourself about smishing tactics to better recognize and avoid future scams.If you suspect you've fallen victim to a smishing attack, first ignore any suspicious text messages and do not reply, even with "STOP," as this may confirm your number is active. If you clicked a link or provided any personal information, contact your bank or service provider immediately using official contact information to secure your accounts. Run a malware scan on your device using reputable antivirus software to detect any potential threats. Monitor your financial statements for unauthorized transactions and consider changing passwords for any accounts that may have been compromised. Finally, educate yourself about smishing tactics to better recognize and avoid future scams.</p>
+        </section>
+
         <!-- Add a navigation button to the next scam page -->
+        <!--
         <div class="btn-container">
           <button class="button-22" id="smishingPhishingNextBtn">Go to the Next Scam Page (Spear Phishing)</button>
         </div>
+        -->
 
         <!-- Footer -->
         <footer class="footer bg-light text-center">
