--- a/frontend/spearPhishing.html
+++ b/frontend/spearPhishing.html
@@ -81,23 +81,14 @@
         <!-- Reference: all the text contents come from https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
         <section class="scam-introduction-section">
             <h1>Spear Phishing</h1>
-            <p>Spear phishing is like a scam message made just for you.
-              <br><br>
-              Imagine a scammer pretending to be someone you know, like a bank employee or a friend. 
-              They send you an email or a text that looks very real, maybe saying something like, "There's a problem with your account" or "Click here to update your information." 
-              Because the scammer knows some personal details about you, 
-              the message seems trustworthy, almost as if it came from someone you know.
-              <br><br>
-              But in reality, they’re trying to trick you into clicking a link or giving them important information like your password or bank card number. 
-              This type of scam is especially dangerous because it's “designed just for you,” making it much harder to spot than a mass-sent scam.</p>
+            <p>Spear phishing is a targeted scam message crafted specifically for you. In this type of attack, a scammer impersonates someone you know, such as a bank employee or a friend, sending an email or text that appears very authentic. The message might say something like, "There's a problem with your account" or "Click here to update your information." Because the scammer has some personal details about you, the message seems credible and trustworthy, as if it came from someone familiar. However, the true intent is to trick you into clicking a malicious link or providing sensitive information, such as your password or bank card number. This type of scam is particularly dangerous because it is tailored to you, making it much harder to recognize than a generic phishing attempt.</p>
         </section>
 
         <section class="scam-real-life-examples-section">
             <div class="content">
                 <h2>Real-Life Examples</h2>
                 <p>
-                  Between 2013 and 2015, Evaldas Rimasauskas impersonated a Taiwanese hardware supplier, Quanta Computer, whose services were used by two tech giants, Google and Facebook. 
-                  He sent out fake invoices worth $122 million ($99 million and $23 million to Google and Facebook, respectively) to these companies for almost three years until he was arrested and prisoned for 30 years.
+                  Between 2013 and 2015, Evaldas Rimasauskas impersonated Quanta Computer, a Taiwanese hardware supplier that provided services to tech giants Google and Facebook. He sent fake invoices totaling $122 million—$99 million to Google and $23 million to Facebook—over nearly three years before being arrested. Rimasauskas was subsequently sentenced to 30 years in prison for his fraudulent activities.
                 </p>
             </div>
             <div class="image-container">
@@ -110,18 +101,26 @@
             <h2>How to Prevent</h2>
             <div class="list-container">
                 <ol class="gradient-list">
-                    <li>If someone asks for personal info suddenly, verify their identity by calling or contacting them through another way.</li>
-                    <li>Look closely at the sender's email to make sure it’s really from someone you know. Scammers often use addresses that look almost the same.</li>
-                    <li>Before clicking a link in an email, hover your mouse over it to check if it leads to a trusted website.</li>
-                    <li>Turn on two-factor authentication for your accounts. Even if someone gets your password, they won’t be able to log in easily.</li>
+                  <li>If someone suddenly requests personal information, verify their identity by calling or contacting them through a different method.</li>
+                  <li>Carefully examine the sender's email address to ensure it’s genuinely from someone you know, as scammers often use addresses that closely resemble legitimate ones.</li>
+                  <li>Before clicking on any link in an email, hover your mouse over it to check if it directs to a trusted website.</li>
+                  <li>Enable two-factor authentication for your accounts; this adds an extra layer of security, making it difficult for unauthorized users to log in even if they have your password.</li>
                 </ol>
             </div>
         </section>
 
+        <section class="how-to-prevent-section">
+          <h2>Recovery Steps</h2>
+          <br>
+          <p>If you suspect you've fallen victim to a spear phishing attack, immediately disconnect from the internet and avoid interacting with any suspicious emails or links. Change your passwords for any accounts that may have been compromised, and enable two-factor authentication to enhance security. Run a thorough scan with reputable antivirus software to detect any malware that might have been installed. Monitor your financial statements and accounts for unauthorized transactions and report any suspicious activity to your bank or service provider. Finally, educate yourself about phishing tactics to better recognize and avoid similar threats in the future.</p>
+        </section>
+
         <!-- Add a navigation button to the next scam page -->
+         <!--
         <div class="btn-container">
           <button class="button-22" id="spearPhishingNextBtn">Go to the Next Scam Page (Voice Phising)</button>
         </div>
+        -->
 
         <!-- Footer -->
         <footer class="footer bg-light text-center">
