--- a/frontend/scamReport/index.html
+++ b/frontend/scamReport/index.html
@@ -47,20 +47,25 @@
 
     <main>
       <section class="description">
-        <p>If you've encountered a suspicious email, website, or message that you believe might be a phishing scam, we encourage you to report it using the form below. By sharing the details of the scam, you help us in our mission to protect others from falling victim to similar attacks. Your report will be included in our Trending Scams report. Please ensure you provide as much detail as possible to help others stay safe.</p>
+        <p>If you've encountered a suspicious email, website, or message that you believe might be a 
+          phishing scam, we encourage you to report it using the form below. By sharing the details of 
+          the scam, you help us in our mission to protect others from falling victim to similar attacks. 
+          Your report will be included in our <a href="../../scrollytelly/data.html">Trending Scams </a>
+          report. Please ensure you provide as much 
+          detail as possible to help others stay safe.</p>
       </section>
 
       <!-- Form starts here -->
       <form id="scamReportForm" method="POST" action="http://127.0.0.1:8000/data/api/submit_report">
         <div class="form-group">
-          <label for="phishingUrl">Please enter the suspected phishing scam or URL:</label>
+          <label for="phishingUrl"><b>Please type or paste the suspected phishing scam or URL:</b></label>
           <textarea id="phishingUrl" name="phishingUrl" class="form-control" rows="9" oninput="countWords(this)"></textarea>
           <small id="wordCount" class="form-text text-muted">0/500 words</small>
         </div>
 
         <div class="form-row">
           <div class="form-group col-md-6">
-            <label for="scamDate">When did you receive the scam?<span class="required">*</span></label>
+            <label for="scamDate"><b>When did you receive the scam?</b><span class="required">*</span></label>
             <input type="date" id="scamDate" name="StartOfMonth" required="" min="2020-01-01">
           </div>
           <div class="form-group col-md-6 text-right">
@@ -69,7 +74,7 @@
         </div>
 
         <div class="form-group">
-          <label for="addressState">Where were you when you received this scam?<span class="required">*</span></label>
+          <label for="addressState"><b>Whhat state were you in when you received this scam?</b><span class="required">*</span></label>
           <select id="addressState" name="Address_State" required="">
             <option value="">Select an option</option>
             <option value="Australian Capital Territory">Australian Capital Territory</option>
@@ -86,7 +91,7 @@
         </div>
 
         <div class="form-group">
-          <label for="contactMode">How did you receive the scam?<span class="required">*</span></label>
+          <label for="contactMode"><b>How did you receive the scam?</b><span class="required">*</span></label>
           <select id="contactMode" name="Scam_Contact_Mode" required="">
             <option value="">Select an option</option>
             <option value="Email">Email</option>
@@ -103,7 +108,7 @@
         </div>
 
         <div class="form-group">
-          <label for="age">How Old Are You?<span class="required">*</span></label>
+          <label for="age"><b>What is your age?</b><span class="required">*</span></label>
           <select id="age" name="Complainant_Age" required="">
             <option value="">Select an option</option>
             <option value="Under 18">Under 18</option>
@@ -117,55 +122,65 @@
         </div>
 
         <div class="form-group">
-          <label for="gender">What Is Your Gender?<span class="required">*</span></label>
-          <select id="gender" name="Complainant_Gender" required="">
-            <option value="">Select an option</option>
-            <option value="Male">Male</option>
-            <option value="Female">Female</option>
-          </select>
+          <label><b>What is your gender?</b><span class="required">*</span></label>
+          <div class="radio-group-horizontal">
+            <input type="radio" id="gender_male" name="Complainant_Gender" value="Male" required>
+            <label for="gender_male">Male</label>
+          </div>
+          <div class="radio-group-horizontal">
+            <input type="radio" id="gender_female" name="Complainant_Gender" value="Female" required>
+            <label for="gender_female">Female</label>
+          </div>
+          <div class="radio-group-horizontal">
+            <input type="radio" id="gender_female" name="Complainant_Gender" value="Other" required>
+            <label for="gender_female">Other</label>
+          </div>
         </div>
 
         <div class="form-group">
-          <label for="categoryLevel2">How Would You Categorise Your Scam?<span class="required">*</span></label>
-          <select id="categoryLevel2" name="Category_Level_2" required="">
-            <option value="">Select an option</option>
-            <option value="Attempts to gain your personal information">Attempts to gain your personal information</option>
-            <option value="Buying or selling">Buying or selling</option>
-            <option value="Investment scams">Investment scams</option>
-          </select>
+          <label><b>What type of scam did you receive?</b><span class="required">*</span></label>
+          <div class="radio-group-horizontal">
+            <input type="radio" id="scam_false_billing" name="Category_Level_3" value="False billing" required>
+            <label for="scam_false_billing">False billing</label>
+          </div>
+          <div class="radio-group-horizontal">
+            <input type="radio" id="scam_phishing" name="Category_Level_3" value="Phishing" required>
+            <label for="scam_phishing">Phishing</label>
+          </div>
+          <div class="radio-group-horizontal">
+            <input type="radio" id="scam_investment" name="Category_Level_3" value="Investment scams" required>
+            <label for="scam_investment">Investment scams</label>
+          </div>
         </div>
 
         <div class="form-group">
-          <label for="categoryLevel3">What Type of Scam did you Receive?<span class="required">*</span></label>
-          <select id="categoryLevel3" name="Category_Level_3" required="">
-            <option value="">Select an option</option>
-            <option value="False billing">False billing</option>
-            <option value="Phishing">Phishing</option>
-            <option value="Investment scams">Investment scams</option>
-          </select>
-        </div>
+          <label for="amountLost"><b>In AUD, how much money did you lose, if any?</b><span class="required">*</span></label>
+          <input type="number" id="amountLost" name="Amount_lost" step="0.01" min="0" placeholder="0.00" required="">
+        </div>        
 
         <div class="form-group">
-          <label for="amountLost">In AUD, How Much Money Did You Lose?<span class="required">*</span></label>
-          <input type="number" id="amountLost" name="Amount_lost" step="0.01" min="0" required="">
-        </div>
-
-        <div class="form-group">
-          <label for="userEmail">Please enter your email address:<span class="required">*</span></label>
+          <label for="userEmail"><b>Please enter your email address:</b><span class="required">*</span></label>
           <input type="email" id="userEmail" name="user_email" class="form-control" required="">
         </div>
         <div class="form-group">
-          <label for="verifyEmail">Verify Email Address:<span class="required">*</span></label>
+          <label for="verifyEmail"><b>Verify Email Address:</b><span class="required">*</span></label>
           <input type="email" id="verifyEmail" name="verify_email" class="form-control" required="">
         </div>
 
         <div class="form-group">
           <input type="checkbox" id="consent" name="consent" required="">
-          <label for="consent">I confirm that the information provided does not contain personal data. I consent to the storage and processing of the submitted details for the purpose of phishing scam investigation and prevention. I understand that the information will be used solely for improving phishing detection and response efforts.<span class="required">*</span></label>
+          <label for="consent">I confirm that the information provided is true and does not contain personal information. 
+            I consent to the storage and processing of the submitted details for the purpose of phishing 
+            scam investigation and prevention. I understand that the information will be used solely for 
+            improving phishing detection and response efforts and will be displayed on the <a href="../../scrollytelly/data.html">Trending Scams </a>
+            report.<span class="required">*</span></label>
         </div>
 
         <button type="submit" class="submit-btn">Submit Report</button>
       </form>
+      <div id="loading" style="display: none;">
+        <p>Loading... Please wait while your report is being submitted.</p>
+      </div>
     </main>
   </div>
 
@@ -215,3 +230,4 @@
   </script>
 </body>
 </html>
+
