--- a/frontend/searchEnginePhishing.html
+++ b/frontend/searchEnginePhishing.html
@@ -57,6 +57,9 @@
                     <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="scamReport/index.html">Report Phishing Scam</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="Quiz/quiz.html">Test Your Knowledge</a>
                   </li>
                   <li class="nav-item dropdown active">
@@ -145,6 +148,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="../scrollytelly/data.html">Trending Scams</a></li>
                     <li><a href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
+                    <li><a href="scamReport/index.html">Report Phishing Scam</a></li>
                     <li><a href="Quiz/quiz.html">Test Your Knowledge</a></li>
                 </ul>
                 </div>
