--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -44,6 +44,9 @@
               <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="../frontend/scamReport/index.html">Report Phishing Scam</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="../frontend/Quiz/quiz.html">Test Your Knowledge</a>
             </li>
             <li class="nav-item dropdown">
@@ -199,6 +202,7 @@
               <li><a href="../frontend/index.html">Home</a></li>
               <li><a href="#">Trending Scams</a></li>
               <li><a href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
+              <li><a href="../frontend/scamReport/index.html">Report Phishing Scam</a></li>
               <li><a href="../frontend/Quiz/quiz.html">Test Your Knowledge</a></li>
             </ul>
           </div>
