--- a/frontend/Quiz/quiz.html
+++ b/frontend/Quiz/quiz.html
@@ -31,6 +31,9 @@
                     <li class="nav-item"></li>
                      <a class="nav-link" href="../../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../scamReport/index.html">Report Phishing Scam</a>
+                      </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#"
                           >Test Your Knowledge <span class="sr-only">(current)</span></a>
@@ -116,6 +119,7 @@
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../../scrollytelly/data.html">Trending Scams</a></li>
                         <li><a href="../../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
+                        <li><a href="../scamReport/index.html">Report Phishing Scam</a></li>
                         <li><a href="#">Test Your Knowledge</a></li>
                     </ul>
                 </div>
