--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,6 +51,9 @@
             <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="scamReport/index.html">Report Phishing Scam</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="Quiz/quiz.html">Test Your Knowledge</a>
           </li>
           <li class="nav-item dropdown">
@@ -184,6 +187,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="../scrollytelly/data.html">Trending Scams</a></li>
             <li><a href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
+            <li><a href="scamReport/index.html">Report Phishing Scam</a></li>
             <li><a href="Quiz/quiz.html">Test Your Knowledge</a></li>
           </ul>
         </div>
