--- a/frontend/Quiz/quiz.html
+++ b/frontend/Quiz/quiz.html
@@ -99,35 +99,22 @@
     </div>
 
     <!-- Footer -->
-    <footer class="footer bg-light text-center mt-4">
+    <footer class="footer bg-light text-center">
         <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h5>Contact Us</h5>
-                    <p>Email: <a href="mailto:info@seniorsafe.com">info@seniorsafe.com</a></p>
-                    <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
-                </div>
-                <div class="col-md-4">
-                    <h5>Follow Us</h5>
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                </div>
-                <div class="col-md-4">
-                    <h5>Quick Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="../../scrollytelly/data.html">Trending Scams</a></li>
-                        <li><a href="../../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
-                        <li><a href="../scamReport/index.html">Report Phishing Scam</a></li>
-                        <li><a href="#">Test Your Knowledge</a></li>
-                    </ul>
-                </div>
-            </div>
-            <hr />
-            <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
+            <div>
+              <h5>Quick Links</h5>
+              <ul class="list-unstyled">
+                <li style="padding: 50px;" class="d-inline"><a href="../index.html">Home</a></li>
+                <li style="padding: 50px;" class="d-inline"><a href="../../scrollytelly/data.html">Trending Scams</a></li>
+                <li style="padding: 50px;" class="d-inline"><a href="../../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
+                <li style="padding: 50px;" class="d-inline"><a href="../scamReport/index.html">Report Phishing Scam</a></li>
+                <li style="padding: 50px;" class="d-inline"><a href="../Quiz/quiz.html">Test Your Knowledge</a></li>
+            </ul>        
+          </div>
+          <hr />
+          <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
         </div>
-    </footer>
+      </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
